--- a/noguchi-janken.form/form.html
+++ b/noguchi-janken.form/form.html
@@ -92,7 +92,7 @@
 		<div data-formrun-show-if-error="個人情報利用同意"><span class="agree">同意してください</span></div>
 	  </div>
 	  
-	<input type="submit" class="Form-Btn" value="送信する">
+	<button type="submit"　class="Form-Btn" data-formrun-error-text="未入力の項目があります" data-formrun-submitting-text="送信中...">送信</button>
   </div>
 
 	<div class="_formrun_gotcha">
