--- a/noguchi-janken.form/rule.html
+++ b/noguchi-janken.form/rule.html
@@ -58,7 +58,7 @@
       <br>
       <div class="font-size">
          グー、チョキ、パーの下のいずれかの手を選択して、野口と勝敗を決めます。先に<b>5回</b>勝った方の優勝となります。<br><br>
-         <input type="image" width=150 height=60 src="file:///C:/Users/s2202425/Documents/noguch_janken/images/janken-rule1.png"><br><br>
+         <input type="image" width=150 height=60 src="images/janken-rule1.png"><br><br>
          あなたが<b>グー</b>を出した場合、野口に<b>チョキ</b>で勝ち、<b>パー</b>で負け、<b>グー</b>であいことなります。<br><br>
          あなたが<b>チョキ</b>を出した場合、野口に<b>パー</b>で勝ち、<b>グー</b>で負け、<b>チョキ</b>であいことなります。<br><br>
          あなたが<b>パー</b>を出した場合、野口に<b></b>グーで勝ち、<b>チョキ</b>で負け、<b>パー</b>であいことなります。<br><br>
