--- a/noguchi-janken.form/rule.html
+++ b/noguchi-janken.form/rule.html
@@ -29,7 +29,7 @@
       </h1>
       <nav class="pc-nav">
          <ul>
-            <li><a href="#">ルール</a></li>
+            <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">ルール</a></li>
             <li><a href="#"></a></li>
             <li><a href="#">情報</a></li>
             <li><a href="#">CONTACT</a></li>
@@ -37,7 +37,7 @@
       </nav>
       <nav class="sp-nav">
          <ul>
-            <li><a href="#">ルール</a></li>
+            <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">ルール</a></li>
             <li><a href="#">SERVICE</a></li>
             <li><a href="#">COMPANY</a></li>
             <li><a href="#">CONTACT</a></li>
