--- a/noguchi-janken.form/thanks-page.html
+++ b/noguchi-janken.form/thanks-page.html
@@ -60,7 +60,7 @@
  引き続き野口じゃんけんをよろしくお願いします。
 
 
-
+</div>
    <footer id="footer">
 	<p><small>Copyright © 2021 野口じゃんけん All Rights Reserved.</small></p>
 	</footer>
