--- a/noguchi-janken.form/form.html
+++ b/noguchi-janken.form/form.html
@@ -74,6 +74,12 @@
 	  <input type="email" class="Form-Item-Input" placeholder="例）example@gmail.com" data-formrun-type="email" data-formrun-required>
 	  <div data-formrun-show-if-error="メールアドレス">メールアドレスを正しく入力してください</div>
 	</div>
+
+<input name="メールアドレス" type="text" data-formrun-type="email">
+
+<div data-formrun-show-if-error="メールアドレス">メールアドレスを正しく入力してください</div>
+
+
 	<div class="Form-Item">
 	  <p class="Form-Item-Label isMsg"><span class="Form-Item-Label-Required">必須</span>お問い合わせ内容</p>
 	  <textarea placeholder="例）バグが見つかりました。速やかな修正パッチを希望します。" class="Form-Item-Textarea" data-formrun-required data-formrun-required ></textarea>
