--- a/noguchi-janken.form/form.html
+++ b/noguchi-janken.form/form.html
@@ -63,7 +63,7 @@
   
 	<div class="Form-Item">
 	  <p class="Form-Item-Label"><span class="Form-Item-Label-Required">必須</span>氏名</p>
-	  <input type="name" class="Form-Item-Input" placeholder="例）山田太郎"data-formrun-required>
+	  <input name="お名前" type="name" class="Form-Item-Input" placeholder="例）山田太郎"data-formrun-required>
 	</div>
 	<div class="Form-Item">
 	  <p class="Form-Item-Label"><span class="Form-Item-Label-Required">必須</span>電話番号</p>
