--- a/noguchi-janken.form/form.html
+++ b/noguchi-janken.form/form.html
@@ -67,19 +67,17 @@
 	</div>
 	<div class="Form-Item">
 	  <p class="Form-Item-Label"><span class="Form-Item-Label-Required">必須</span>電話番号</p>
-	  <input type="tel" class="Form-Item-Input" placeholder="例）000-0000-0000" data-formrun-required>
+	  <input name=電話番号 type="tel" class="Form-Item-Input" placeholder="例）000-0000-0000" data-formrun-required>
 	</div>
 	<div class="Form-Item">
 	  <p class="Form-Item-Label"><span class="Form-Item-Label-Required">必須</span>メールアドレス</p>
-	  <input type="email" class="Form-Item-Input" placeholder="例）example@gmail.com" data-formrun-type="email" data-formrun-required>
+	  <input name=メールアドレス type="email" class="Form-Item-Input" placeholder="例）example@gmail.com" data-formrun-type="email" data-formrun-required>
 	  <div data-formrun-show-if-error="メールアドレス">メールアドレスを正しく入力してください</div>
 	</div>
 
-
-
 	<div class="Form-Item">
 	  <p class="Form-Item-Label isMsg"><span class="Form-Item-Label-Required">必須</span>お問い合わせ内容</p>
-	  <textarea placeholder="例）バグが見つかりました。速やかな修正パッチを希望します。" class="Form-Item-Textarea" data-formrun-required data-formrun-required ></textarea>
+	  <textarea name=お問い合わせ placeholder="例）バグが見つかりました。速やかな修正パッチを希望します。" class="Form-Item-Textarea" data-formrun-required data-formrun-required ></textarea>
 	  <div data-formrun-show-if-error="お問い合わせ">お問い合わせ入力してください</div>
 	</div>
 	<div class="Form-Item">
