--- a/noguchi-janken.form/form.html
+++ b/noguchi-janken.form/form.html
@@ -26,22 +26,22 @@
    <header>
 	<img width=40 height=40 src="images/noguchi-janken-logo.png">
       <h1>
-         <a href="/">野口じゃんけん</a>
+         <a href="https://noguchi-janken.github.io/index.html">野口じゃんけん</a>
       </h1>
       <nav class="pc-nav">
          <ul>
-            <li><a href="#">ルール</a></li>
+            <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">rule</a></li>
+            <li><a href="">Q&A</a></li>
             <li><a href="#"></a></li>
-            <li><a href="#">情報</a></li>
-            <li><a href="#">CONTACT</a></li>
+            <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">CONTACT</a></li>
          </ul>
       </nav>
       <nav class="sp-nav">
          <ul>
-            <li><a href="#">ルール</a></li>
-            <li><a href="#">SERVICE</a></li>
-            <li><a href="#">COMPANY</a></li>
-            <li><a href="#">CONTACT</a></li>
+            <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">rule</a></li>
+            <li><a href="#">Q&A</a></li>
+            <li><a href="#"></a></li>
+            <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">CONTACT</a></li>
             <li class="close"><span>閉じる</span></li>
          </ul>
       </nav>
