--- a/noguchi-janken.form/rule.html
+++ b/noguchi-janken.form/rule.html
@@ -29,10 +29,10 @@
       </h1>
       <nav class="pc-nav">
          <ul>
-            <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">ルール</a></li>
+            <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">rule</a></li>
+            <li><a href="#">Q&A</a></li>
             <li><a href="#"></a></li>
-            <li><a href="#">情報</a></li>
-            <li><a href="#">CONTACT</a></li>
+            <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/form.html">CONTACT</a></li>
          </ul>
       </nav>
       <nav class="sp-nav">
