--- a/noguchi-janken.form/rule.html
+++ b/noguchi-janken.form/rule.html
@@ -38,9 +38,9 @@
       <nav class="sp-nav">
          <ul>
             <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">ルール</a></li>
-            <li><a href="#">SERVICE</a></li>
-            <li><a href="#">COMPANY</a></li>
-            <li><a href="#">CONTACT</a></li>
+            <li><a href="#">Q&A</a></li>
+            <li><a href="#"></a></li>
+            <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/form.html">CONTACT</a></li>
             <li class="close"><span>閉じる</span></li>
          </ul>
       </nav>
