--- a/noguchi-janken.form/form.html
+++ b/noguchi-janken.form/form.html
@@ -30,17 +30,15 @@
       </h1>
       <nav class="pc-nav">
          <ul>
-            <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">rule</a></li>
+            <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">Rule</a></li>
             <li><a href="">Q&A</a></li>
-            <li><a href="#"></a></li>
             <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">CONTACT</a></li>
          </ul>
       </nav>
       <nav class="sp-nav">
          <ul>
-            <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">rule</a></li>
+            <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">Rule</a></li>
             <li><a href="#">Q&A</a></li>
-            <li><a href="#"></a></li>
             <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">CONTACT</a></li>
             <li class="close"><span>閉じる</span></li>
          </ul>
