--- a/noguchi-janken.form/rule.html
+++ b/noguchi-janken.form/rule.html
@@ -30,14 +30,14 @@
       <nav class="pc-nav">
          <ul>
             <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">Rule</a></li>
-            <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form.html">FAQ</a></li>
+            <li><a href="https://noguchi-janken.github.io/test/.html">FAQ</a></li>
             <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/form.html">CONTACT</a></li>
          </ul>
       </nav>
       <nav class="sp-nav">
          <ul>
             <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">Rule</a></li>
-            <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form.html">FAQ</a></li>
+            <li><a href="https://noguchi-janken.github.io/test/FAQ.html">FAQ</a></li>
             <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/form.html">CONTACT</a></li>
             <li class="close"><span>閉じる</span></li>
          </ul>
