--- a/noguchi-janken.form/rule.html
+++ b/noguchi-janken.form/rule.html
@@ -30,7 +30,7 @@
       <nav class="pc-nav">
          <ul>
             <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">Rule</a></li>
-            <li><a href="https://noguchi-janken.github.io/test/.html">FAQ</a></li>
+            <li><a href="https://noguchi-janken.github.io/test/FAQ.html">FAQ</a></li>
             <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/form.html">CONTACT</a></li>
          </ul>
       </nav>
