--- a/noguchi-janken.form/form.html
+++ b/noguchi-janken.form/form.html
@@ -55,7 +55,7 @@
 	  <label for="_formrun_gotcha">If you are a human, ignore this field</label>
 	  <input type="text" name="_formrun_gotcha" id="_formrun_gotcha" tabindex="-1">
 	</div>
-	<div class="forth-visual">野口じゃんけんお問い合わせフォーム</div>
+	<div class="fifth-visual">野口じゃんけんお問い合わせフォーム</div>
 	
  
   
