--- a/noguchi-janken.form/form.html
+++ b/noguchi-janken.form/form.html
@@ -62,10 +62,12 @@
 	<div class="Form-Item">
 	  <p class="Form-Item-Label"><span class="Form-Item-Label-Required">必須</span>氏名</p>
 	  <input name=お名前 type="name" class="Form-Item-Input" placeholder="例）山田太郎"data-formrun-required>
+		<div data-formrun-show-if-error="お名前">氏名を入力してください</div>
 	</div>
 	<div class="Form-Item">
 	  <p class="Form-Item-Label"><span class="Form-Item-Label-Required">必須</span>電話番号</p>
 	  <input name=電話番号 type="tel" class="Form-Item-Input" placeholder="例）000-0000-0000" data-formrun-required>
+		<div data-formrun-show-if-error="電話番号">電話番号を入力してください</div>
 	</div>
 	<div class="Form-Item">
 	  <p class="Form-Item-Label"><span class="Form-Item-Label-Required">必須</span>メールアドレス</p>
