--- a/noguchi-janken.form/form.html
+++ b/noguchi-janken.form/form.html
@@ -66,7 +66,7 @@
 	</div>
 	<div class="Form-Item">
 	  <p class="Form-Item-Label"><span class="Form-Item-Label-Required">必須</span>電話番号</p>
-	  <input name=電話番号 type="tel" class="Form-Item-Input" placeholder="例）000-0000-0000" data-formrun-required>
+	  <input name=電話番号 type="tel" class="Form-Item-Input" placeholder="例）000-0000-0000" data-formrun-type="tel"　data-formrun-required>
 		<div data-formrun-show-if-error="電話番号">電話番号を入力してください</div>
 	</div>
 	<div class="Form-Item">
