--- a/noguchi-janken.form/rule.html
+++ b/noguchi-janken.form/rule.html
@@ -38,7 +38,7 @@
          <ul>
             <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">Rule</a></li>
             <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/FAQ.html">FAQ</a></li>
-            <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/form.html">CONTACT</a></li>
+            <li><a href="https://noguchi-janken.github.io/AR1/ar.html">CONTACT</a></li>
             <li class="close"><span>閉じる</span></li>
          </ul>
       </nav>
