--- a/noguchi-janken.form/form.html
+++ b/noguchi-janken.form/form.html
@@ -32,14 +32,14 @@
          <ul>
             <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">Rule</a></li>
             <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/FAQ.html">FAQ</a></li>
-            <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">CONTACT</a></li>
+            <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/form.html">CONTACT</a></li>
          </ul>
       </nav>
       <nav class="sp-nav">
          <ul>
             <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">Rule</a></li>
             <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/FAQ.html">FAQ</a></li>
-            <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/rule.html">CONTACT</a></li>
+            <li><a href="https://noguchi-janken.github.io/test/noguchi-janken.form/form.html">CONTACT</a></li>
             <li class="close"><span>閉じる</span></li>
          </ul>
       </nav>
