--- a/noguchi-janken.form/rule.html
+++ b/noguchi-janken.form/rule.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-210808406-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-210808406-1');
+</script>
    <meta charset="utf-8">
    <title>野口じゃんけん</title>
    <link rel = "icon" href = "images/野口じゃんけん.png" 
