--- a/noguchi-janken.form/FAQ.html
+++ b/noguchi-janken.form/FAQ.html
@@ -65,7 +65,7 @@
 
 
    <footer id="footer">
-	<p><small>Copyright © 2021 野口じゃんけん All Rights Reserved.</small></p>
+	<p><small>Copyright © 2021-2023 野口じゃんけん All Rights Reserved.</small></p>
 	</footer>
 </body>
 </html>
